# SDUChatBot

./: API.md  Architecture.md  PRD.md  README.md  User_Stories.md
SDUBot-ChatVersioning/: package-lock.json  package.json
SDUBot-ChatVersioning/src/: App.js
apps/gen-ai/ChatBotService/: .gitignore  api_docs.json
apps/mobile/ios/: README.md
apps/web/SDUBot-ChatVersioning-Beta/public/: index.html
apps/web/SduChatBotFront/: .gitlab-ci.yml
aws/ChatBotService/: .env.example  README.md  condense_prompt_system.txt  condense_prompt_user.txt  lambda_function.py  main_prompt_system.txt  main_prompt_user.txt  request.json  response.json  topic_prompt_system.txt  topic_prompt_user.txt
frontend/SDUBot-ChatVersioning-Beta/: README.md
frontend/SduChatBotFront/: .env.example  README.md
infra/: app.py
on-premise/LocalChatBotService/: README.md
on-premise/LocalChatBotService/tgbot/: requirements.txt
on-premise/QdrantRagService/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
on-premise/QdrantRagService/src/: data_loader.py  test_client.py
on-premise/TelegramBotUI/: .env.example  Dockerfile  README.md  config.py  db.py  docker-compose.yml  handlers.py  main.py  requirements.txt  routers.py  tree_structure.py
on-premise/TelegramBotUI/DataStore/: database.db
on-premise/TelegramBotUI/db_queries/: create_tables.sql  create_triggers.sql  drop_tables.sql
on-premise/TelegramBotUI/input_files/: back_button.json
on-premise/TelegramBotUI/input_files/authorization/: authorization.json
(+7 files in other folders)
